--- a/html/taller2_tabla3.html
+++ b/html/taller2_tabla3.html
@@ -10,16 +10,16 @@
     <table border="1">
         <tr>
             <th colspan="4">
-                <img src="../recuersos/videos/HTML_1.gif" alt="HTML">
+                <img src="../recursos/videos/HTML_1.gif" alt="HTML">
             </th>
             <th colspan="2">
-                <img src="../recuersos/fotos/260px-Programacion_web.jpeg" alt="" width="150" height="150"><br>
+                <img src="../recursos/videos/wrapper-img.gif" alt="" width="150" height="150"><br>
                 <br>
                 <br>
-                <img src="../recuersos/fotos/blur-close-up-code-computer-546819-1080x675.jpg" alt="" width="150" height="150"><br>
+                <img src="../recursos/fotos/1114.gif" alt="" width="150" height="150"><br>
                 <br>
                 <br>
-                <img src="../recuersos/fotos/images.jpeg" alt="" width="150" height="150">
+                <img src="../recursos/fotos/260px-Programacion_web.jpeg" alt="" width="150" height="150">
             </td> 
             </th>
             <tr>
@@ -28,10 +28,10 @@
         </tr> 
         <tr>
             <td>
-                <img src="../recuersos/fotos/css.png" alt="css" width="150" height="150">
+                <img src="../recursos/fotos/js.png" alt="css" width="150" height="150">
                 <br>
                 <br>
-                <img src="../recuersos/videos/1112.gif" alt="" width="190" height="70">
+                <img src="../recursos/fotos/1113.png" alt="" width="120" height="70">
             </td>
             <td>Lorem ipsum dolor sit amet <br>
                 consectetur adipisicing elit. <br>
@@ -49,10 +49,10 @@
                 quas natus, modi non, eaque veritatis? </td>
                 
             <td>
-                <img src="../recuersos/fotos/js.png" alt="java" width="150" height="150">
+                <img src="../recursos/fotos/descarga.jpeg" alt="java" width="150" height="150">
                 <br>
                 <br>
-                <img src="../recuersos/fotos/1114.gif" alt="" width="150" height="150">
+                <img src="../recursos/fotos/css.png" alt="" width="150" height="150">
             </td>
             <td> Lorem ipsum dolor sit amet <br>
                  consectetur adipisicing elit. <br>
@@ -71,10 +71,10 @@
                 
                 </td>
             <td>
-                <img src="../recuersos/videos/giphy.gif" alt="gif"width="180" height="160">
+                <img src="../recursos/fotos/blur-close-up-code-computer-546819-1080x675.jpg" alt="gif"width="180" height="160">
                 <br>
                 <br>
-                <img src="../recuersos/videos/wrapper-img.gif" alt="gif" idth="180" height="160">
+                <img src="../recursos/fotos/1112.gif" alt="gif" idth="40" height="90">
             </td>
             <td>
                  Lorem ipsum dolor sit amet <br>
